<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lyra Ear Trainer</string>
    <string name="action_settings">Settings</string>
    <string name="tutorial">TUTORIAL</string>
    <string name ="close_tutorial">CLOSE TUTORIAL</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_nick">Please Enter a Nickname:</string>
    <string name="submit">SUBMIT</string>
    <string name="nick_description">        The nickname you create will be shown in the leaderboard for you and your friends to identify your high scores.</string>
    <string name="title_activity_test">TestActivity</string> 
    <string name="title_activity_nick">NickActivity</string>
    
    <string name ="volume">VOLUME</string>
    <string name = "restart">RESTART GAME</string>
    <string name = "resume">RESUME GAME</string>
    <string name = "quit">QUIT GAME</string> 
    <string name = "volume_val"> volume_val</string>
    <string name = "scoreText">Final score: </string>

    <string name="game_mode_prompt">GAME MODE</string>
    
    <string-array name="game_modes">
        <item>Practice</item>
        <!--<item>Challenge</item>-->
        <item >Challenge</item>
        <item >Free Play</item>
    </string-array>

    <string name="startGame">START GAME</string>
    
    <string name="difficulty_prompt">DIFFICULTY LEVEL</string>
    <string-array name="difficulty_levels">
        <item>Beginner</item>
        <!--<item>Intermediate</item>
        <item>Advanced</item>-->
        <item >Intermediate</item>
        <item >Advanced</item>
    </string-array>
    
    <string name="scale_prompt">Scale:</string>
    <string-array name="scales">
        <item>Major</item>
    </string-array>
    
    <string name="instrument_prompt">INSTRUMENT</string>
    <string-array name="instruments">
        <item>Piano</item>
        <!--<item>Bass Guitar</item>-->
        <item >Guitar</item>
    </string-array>
    
    <string name="interval_prompt">INTERVAL</string>
    <string name="direction_prompt">DIRECTION</string>
 
    <string name="replay">Replay</string>
    <string name="pause">Pause</string>
    <string name="score">Score</string>
    <string name="key1">C3</string>
    <string name="key2">C#/Db</string>
    <string name="key3">D</string>
    <string name="key4">D#/Eb</string>
    <string name="key5">E</string>
    <string name="key6">F</string>
    <string name="key7">F#/Gb</string>
    <string name="key8">G</string>
    <string name="key9">G#/Ab</string>
    <string name="key10">A</string>
    <string name="key11">A#/Bb</string>
    <string name="key12">B</string>
    <string name="key13">C4</string>
    <string name="key14">C#/Db</string>
    <string name="key15">D</string>
    <string name="key16">D#/Eb</string>
    <string name="key17">E</string>
    <string name="key18">F</string>
    <string name="key19">F#/Gb</string>
    <string name="key20">G</string>
    <string name="key21">G#/Ab</string>
    <string name="key22">A</string>
    <string name="key23">A#/Bb</string>
    <string name="key24">B</string>
    <string name="key25">C5</string>
    <string name="title_ear_trainer">EAR TRAINER</string>
    <string name="main_menu_game">GAME</string>
    <string name="main_menu_settings">SETTINGS</string>
    <string name="main_menu_tutorial">TUTORIAL</string>
    <string name="main_menu_leaderboards">LEADERBOARD</string>
    <string name="main_menu_description">Main Menu description placeholder</string>
    <string name="game_over">GAME OVER!</string>
    <string name="game_over_main_menu">MAIN MENU</string>
    <string name="game_over_restart">RESTART</string>
    <string name="game_over_description">This game has ended, but will you play again?</string>
    <string name="strikes">Strikes</string>
    <string name="guitar">Guitar Layout</string>
    <string name="tab1">E</string>
	<string name="tab2">F</string>
	<string name="tab3">F#/Gb</string>
	<string name="tab4">G</string>
	<string name="tab5">G#/Ab</string>
	<string name="tab6">A</string>
	<string name="tab7">A</string>
	<string name="tab8">A#/Bb</string>
	<string name="tab9">B</string>
	<string name="tab10">C</string>
	<string name="tab11">C#/Db</string>
	<string name="tab12">D</string>
	<string name="tab13">D</string>
	<string name="tab14">D#/Eb</string>
	<string name="tab15">E</string>
	<string name="tab16">F</string>
	<string name="tab17">F#/Gb</string>
	<string name="tab18">G</string>
	<string name="tab19">G</string>
	<string name="tab20">G#/Ab</string>
	<string name="tab21">A</string>
	<string name="tab22">A#/Bb</string>
	<string name="tab23">B</string>
	<string name="tab24">C</string>
	<string name="tab25">B</string>
	<string name="tab26">C</string>
	<string name="tab27">C#/Db</string>
	<string name="tab28">D</string>
	<string name="tab29">D#/Eb</string>
	<string name="tab30">E</string>
	<string name="tab31">E</string>
	<string name="tab32">F</string>
	<string name="tab33">F#/Gb</string>
	<string name="tab34">G</string>
	<string name="tab35">G#/Ab</string>
	<string name="tab36">A</string>
	<string name="leaderboard_col1">#</string>
	<string name="leaderboard_col2">Name</string>
	<string name="leaderboard_col3">Score</string>
	<string name="leaderboard_title">LEADERBOARD</string>
	<string name="leaderboard_prev">Previous Page</string>
	<string name="leaderboard_next">Next Page</string>
	<string name="pause_title">PAUSE</string>
	<string name="options_title">OPTIONS</string>
	<string name="hi_low_textBox">NOTE ORDER</string>
    <string name="show_hide">Show/Hide</string>
    <string name="notedisplay">Note: --</string>
</resources>
